package seminar8.mvi.model;

/**
 * Интерфейс ViewState представляет состояние представления.
 * Это маркерный интерфейс для определения различных видов состояний.
 */
public interface ViewState {}